k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: node-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node
  template: 
    metadata:
      labels:
        app: node
    spec:
      containers:
      - name: simple-node-app
        image: umaiwa9/simple-node-app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: app-storage
          mountPath: /usr/src/app/data
      volumes:
      - name: app-storage
        persistentVolumeClaim:
          claimName: node-app-pvc
