k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-app
spec:
  type: NodePort
  selector:
    app: node
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 30001
